--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,12 @@ body {
 	overflow: hidden;
 	position: relative;
 }
-body.grayscale::before {
-	content: "";
+body .grayscale {
+	display: block;
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	z-index: -1;
 	background-color: rgba(0, 0, 0, 40%);
 }
 @media (min-width: 992px) {
@@ -139,6 +140,7 @@ header .container a:hover {
 		background-color: white;
 		flex-direction: column;
     position: absolute;
+		z-index: 9999;
     top: 0;
 		right: -220px;
 		width: 220px;
