--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,10 @@ a {
 	box-sizing: border-box;
 }
 /* Start Header */
-header  {
+header {
 	padding: 20px 40px;
 	position: absolute;
+	overflow: hidden;
 	width: 100%;
 }
 header .container {
